--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,30 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+footer {
+  background: #fce138;
+  width: 100%;
+  padding: 40px 35px;
+}
+
+footer h2 {
+  display: inline;
+  color: #024e76;
+  font-size: 30px;
+  margin: 0;
+}
+
+footer div {
+  float: right;
+  line-height: 1.5;
+  text-align: right;
+}
+
+footer a {
+  color: #024e76;
 }
 
 body {
@@ -48,4 +72,6 @@ header {
   padding-right: 15px;
   padding-bottom: 20px;
   padding-left: 25px;
+}
+
 }
