add flexbox to header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,9 @@
 header {
   padding: 20px 35px;
   background-color: #39a6b2;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 /* Explicitly list the side it should be applied to*/
@@ -25,14 +28,12 @@ header a {
 
 header h1 {
   font-weight: bold;
+  margin: 0;
   font-size: 36px;
   color: #fce138;
-  margin: 0;
-  display: inline;
 }
 
 header nav {
-  float: right;
   margin: 7px 0;
 }
 
